$Rev$
[2008/02/15]
Editor.py           Skip control keys on keydown event

[2008/01/18]
common.py           Fix webopen bug, cann't correctly deal with 'mailto:'
mDDESupport.py      Fix DDE bug, thanks to LP <liupengf12@gmail.com>

[2008/01/16]
plugins/SpellCheck.py  67598092
                    Refactor interface
                    
[2008/01/15]
common.py           Add icon set theme support.

[2008/01/14]
PrefDialog.py mPreference.py
                    Change preference dialog from notebook to treebook
AsyncAction.py mInputAssistant.py
                    Refactor the AsyncAction class, and add get_timestep() method. 
                    Reference to ygao's implemention
Editor.py, *        Fix if lines are folded, when goto hiding lines will no effect bug. 
                   
[2008/01/12]
DDE.py mDDESupport.py
                    Change DDE to asyncore and asynchat framework
                    
[2008/01/11]
mako_plugin/dirbrowserext.py makotmp.acp
                    Fix mako tag auto complete bug #issue 14
unicodetext.py      Fix utf-16 convertion bug
mIndentMove.py      When moving next indent position, select the text #issue 15
FlatNotebook.py     Fix if set DROP_DOWN_TABS_LIST style, right arrow will disappear bug
MainFrame.py mAutoCheck.py
                    Change auto file check and disable memory display

[2008/01/10]
EditorFactory.py    Add FNB.FNB_DROPDOWN_TABS_LIST style to EditorCtrl
Entry.py            Using new SetFocus method of meide
dynamicmenu.py      Fix editor shortcuts key caption error

[2008/01/09]
ShellWindow.py      Fix popup menu creation too late, so the UpdateUI will raise exception
Editor.py           Also change popup menu creation position
HtmlPage.py         Fix GTK platform display
AsyncAction.py mInputassistant.py
                    Improve AsyncAction.py using block mode and timeout parameter, so
                    it'll natural implement the timeout delay process after press a key.