@@ -1144,15 +1144,12 @@ class TabNavigatorWindow(wx.Dialog):
         if event.GetKeyCode() == wx.WXK_CONTROL:
             self.CloseDialog()
 
-
-    def OnNavigationKey(self, event):
-        """Handles the wx.EVT_NAVIGATION_KEY for the L{TabNavigatorWindow}. """
-
+    def Navigation(self, direction=True):
         selected = self._listBox.GetSelection()
         bk = self.GetParent()
         maxItems = bk.GetPageCount()
             
-        if event.GetDirection():
+        if direction:
         
             # Select next page
             if selected == maxItems - 1:
@@ -1169,6 +1166,10 @@ class TabNavigatorWindow(wx.Dialog):
                 itemToSelect = selected - 1
         
         self._listBox.SetSelection(itemToSelect)
+        
+    def OnNavigationKey(self, event):
+        """Handles the wx.EVT_NAVIGATION_KEY for the L{TabNavigatorWindow}. """
+        self.Navigation(event.GetDirection())
 
 
     def PopulateListControl(self, book):
@@ -3442,6 +3443,18 @@ class FlatNotebook(wx.PyPanel):
             self._naviIcon = bmp
         else:
             raise TypeError, "SetNavigatorIcon requires a valid bitmap"
+        
+    def Navigation(self, direction=True):
+        if len(self._windows) >= 1:
+            if not self._popupWin:
+                self._popupWin = TabNavigatorWindow(self, self._naviIcon)
+                self._popupWin.SetReturnCode(wx.ID_OK)
+                self._popupWin.ShowModal()
+                self._popupWin.Destroy()
+                self._popupWin = None
+            else:
+                # a dialog is already opened
+                self._popupWin.Navigation(direction)
 
     def OnNavigationKey(self, event):
         """ Handles the wx.EVT_NAVIGATION_KEY event for L{FlatNotebook}. """
@@ -3451,16 +3464,8 @@ class FlatNotebook(wx.PyPanel):
                 return
             # change pages
             if self.HasFlag(FNB_SMART_TABS):
-                if not self._popupWin:
-                    self._popupWin = TabNavigatorWindow(self, self._naviIcon)
-                    self._popupWin.SetReturnCode(wx.ID_OK)
-                    self._popupWin.ShowModal()
-                    self._popupWin.Destroy()
-                    self._popupWin = None
-                else:
-                    # a dialog is already opened
-                    self._popupWin.OnNavigationKey(event)
-                    return
+                self.Navigation(event.GetDirection())
+                return
             else:
                 # change pages
                 self.AdvanceSelection(event.GetDirection())
